--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
   for = "/llms.txt"
   [headers.values]
     access-control-allow-origin = "*"
+
+[[headers]]
+  for = "/llms-*.txt"
+  [headers.values]
+    access-control-allow-origin = "*"
