--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,6 @@
     access-control-allow-origin = "*"
 
 [[headers]]
-  for = "/openrouter-llms.txt"
+  for = "/*-llms.txt"
   [headers.values]
     access-control-allow-origin = "*"
